# fit4012-lab7-sha-starter-kit-dinhtri206

./: CMakeLists.txt  Makefile  file_integrity.cpp  password_hash.cpp  salted_password_hash.cpp  sha256_lib.h  structure.h
scripts/: run_sample.sh
tests/: test_file_integrity_tamper.sh  test_known_vectors.sh  test_password_hash.sh  test_salted_password.sh  test_sha_compile.sh
